--- a/css/sff_base.css
+++ b/css/sff_base.css
@@ -14,7 +14,6 @@
     /* CUSTOMIZE THE NAVBAR
     -------------------------------------------------- */
 
-    /* Special class on .container surrounding .navbar, used for positioning it into place. */
     .navbar-wrapper {
       position: absolute;
       top: 0;
@@ -97,6 +96,7 @@
       left: 0;
       min-width: 100%;
       height: 500px;
+
     }
 
     .carousel-caption {
@@ -146,12 +146,13 @@
       margin: 80px 0; /* Space out the Bootstrap <hr> more */
     }
     .featurette {
-      padding-top: 120px; /* Vertically center images part 1: add padding above and below text. */
+      margin-left: 1%; 
+      padding-top: 20px; /* Vertically center images part 1: add padding above and below text. */
       overflow: hidden; /* Vertically center images part 2: clear their floats. */
     }
     .featurette-image {
-      margin-top: -75px; /* Vertically center images part 3: negative margin up the image the same amount of the padding to center it. */
-      margin-right: 360px;
+      margin-top: -35px; /* Vertically center images part 3: negative margin up the image the same amount of the padding to center it. */
+      margin-right: 3%;
     }
 
     /* Give some space on the sides of the floated elements so text doesn't run right into it. */
@@ -217,6 +218,7 @@
       .featurette {
         height: auto;
         padding: 0;
+        margin: -20px 0;
       }
       .featurette-image.pull-left,
       .featurette-image.pull-right {
@@ -225,6 +227,10 @@
         max-width: 40%;
         margin: 0 auto 20px;
       }
+      .featurette p {
+        font-size: 14px;
+        line-height: 1.3;
+        max-width: #navbar.width();
     }
 
 
@@ -280,12 +286,20 @@
         margin-top: -15px;
       }
 
+      .featurette {
+        padding-top: 20px;
+      }
       .featurette-heading {
         font-size: 30px;
       }
       .featurette .lead {
         font-size: 18px;
         line-height: 1.5;
+      }
+        .featurette p {
+        font-size: 10px;
+        line-height: 1.1;
+        max-width: #navbar.width();
       }
 
     }
