Removed pics and did updates to have blogpost text align with pics

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -4544,7 +4544,8 @@ input[type="submit"].btn.btn-mini {
 }
 
 .navbar .nav > li > a:focus,
-.navbar .nav > li > a:hover {
+.
+ .nav > li > a:hover {
   color: #333333;
   text-decoration: none;
   background-color: transparent;
