--- a/css/sff_base.css
+++ b/css/sff_base.css
@@ -48,6 +48,12 @@
       text-shadow: 0 -1px 0 rgba(0,0,0,.5);
     }
 
+  /* Adding an image tag for formatting of logo pic in navbar 
+      .navbar .brand .img{
+      max-height: 30px
+      }*/
+
+
     /* Navbar links: increase padding for taller navbar */
     .navbar .nav > li > a {
       padding: 15px 20px;
@@ -196,6 +202,7 @@
       }
 
       .carousel .item {
+        max-width: #navbar.width();
         height: 500px;
         margin-right: 3%;
         margin-left: 3%;
@@ -302,6 +309,90 @@
         line-height: 1.1;
         max-width: #navbar.width();
       }
+
+      .featurette-image.pull-left,
+      .featurette-image.pull-right {
+        display: block;
+        float: none;
+        max-width: 100%;
+        margin: 0 auto 20px;
+
+    }
+
+    @media (max-width: 500px) {
+
+      .navbar-inner {
+        border-radius:  0;
+        margin: -20px;
+        margin-right: 3%;
+        margin-left: 3%;
+      }
+
+      .carousel {
+        margin-left: -20px;
+        margin-right: -20px;
+        margin-bottom: -15px;
+      }
+      .carousel .container {
+       background-position: center;
+      }
+      .carousel .item {
+        height: 300px;
+        margin-right: 3%;
+        margin-left: 3%;
+      }
+      .carousel img {
+        height: 300px;
+      }
+      .carousel-caption {
+        width: 65%;
+        padding: 0 30px;
+        margin-top: 100px;
+      }
+      .carousel-caption h1 {
+        font-size: 20px;
+      }
+      .carousel-caption .lead,
+      .carousel-caption .btn {
+        font-size: 12px;
+        /* Adding a fixed font size to try responsiveness. */
+      }
+      .carousel-control {
+      height: 40px;
+      margin-top: 0;
+      font-size: 80px;
+      text-shadow: 0 1px 1px rgba(0,0,0,.4);
+      background-color: transparent;
+      border: 0;
+      margin-right: 3%;
+      margin-left: 3%;
+    }
+      .marketing .span4 + .span4 {
+        margin-top: -15px;
+      }
+
+      .featurette {
+        padding-top: 12px;
+      }
+      .featurette-heading {
+        font-size: 12px;
+      }
+      .featurette .lead {
+        font-size: 12px;
+        line-height: 1.3;
+      }
+        .featurette p {
+        font-size: 10px;
+        line-height: 1.1;
+        max-width: #navbar.width();
+      }
+
+      .featurette-image.pull-left,
+      .featurette-image.pull-right {
+        display: block;
+        float: none;
+        max-width: 100%;
+        margin: 0 auto 20px;
 
     }
     </style>
