--- a/css/sff_base.css
+++ b/css/sff_base.css
@@ -42,21 +42,23 @@
 
     /* Downsize the brand/project name a bit */
     .navbar .brand {
-      padding: 14px 20px 16px; /* Increase vertical padding to match navbar links */
+      padding-bottom: -10px;
+      padding: 8px 20px 8px; /* Increase vertical padding to match navbar links */
       font-size: 16px;
       font-weight: bold;
       text-shadow: 0 -1px 0 rgba(0,0,0,.5);
     }
 
-  /* Adding an image tag for formatting of logo pic in navbar 
+/*   Adding an image tag for formatting of logo pic in navbar 
       .navbar .brand .img{
-      max-height: 30px
-      }*/
+      max-height: 32px
+      }
 
 
     /* Navbar links: increase padding for taller navbar */
     .navbar .nav > li > a {
-      padding: 15px 20px;
+      font-size: 20px;
+      padding: 45px 20px;
     }
 
     /* Offset the responsive button for proper vertical alignment */
@@ -376,10 +378,12 @@
       }
       .featurette-heading {
         font-size: 12px;
+        max-width: #navbar.width();
       }
       .featurette .lead {
         font-size: 12px;
         line-height: 1.3;
+        max-width: #navbar.width();
       }
         .featurette p {
         font-size: 10px;
